# Rubix-Smart-Contract-Examples

./: README.md
abstractions/: README.md
abstractions/addition_app/: addition_contract.wasm  go.mod  go.sum  main.go
abstractions/addition_contract/: Cargo.toml  build_local.sh
abstractions/addition_contract/src/: lib.rs
abstractions/bidding_contract/: Cargo.toml
abstractions/bidding_contract/artifacts/: bidding_contract.wasm  bids.json
abstractions/bidding_contract/dapp/: .env  go.sum
abstractions/wasm_go/: go.mod  go.sum  wasm_module.go
abstractions/wasm_lib/: Cargo.toml
abstractions/wasm_macros/: Cargo.toml
abstractions/whitelist_contract/: Cargo.toml  build_local.sh
bidding-contract/: .env  go.mod  go.sum  main.go
bidding-contract-createdidapi/: main.go
bidding-contract-createdidapi/contract/: contractExecution.go
bidding-contract-createdidapi/createdid_contract/: Cargo.toml
bidding-contract/bidding_contract/: Cargo.toml
bidding-contract/bidding_contract/src/: decrypt.rs  lib.rs
bidding-contract/contract/: contractExecution.go  encrypt.go  runtime.go
createdidapi/: .env  README.md  go.mod  go.sum  main.go
createdidapi/contract/: runtime.go
multi-contract-interaction/: README.md
multi-contract-interaction/bidding_contract/: Cargo.toml
multi-contract-interaction/whitelisting_contract/: Cargo.toml  op.txt
voting-contract/: .env  README.md  go.mod  go.sum  main.go
voting-contract/contract/: api.go  runtime.go
voting-contract/server/: server.go
voting-contract/voting_contract/: Cargo.toml
(+38 files in other folders)
