[package]
name = "bidding_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.105"
ecies = {version = "0.2", default-features = false, features = ["pure"]}
pem = "1.0"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

